Fix: Remove premature IIFE closing

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -954,9 +954,7 @@
         window.showSection = showSection;
         window.logout = logout;
 
-    })(); // End admin check IIFE
-
-        // --- GLOBAL MENU FUNCTIONS (OUTSIDE IIFE) ---
+        // --- GLOBAL MENU FUNCTIONS ---
         // These MUST be global so onclick handlers can access them
 
         function handleCategoryChange() {
@@ -1114,4 +1112,3 @@
 </body>
 
 </html>
-
